Styled main elements

--- a/weatherapp.html
+++ b/weatherapp.html
@@ -7,7 +7,6 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="src/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400&display=swap"
@@ -46,7 +45,11 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img class="float-left" src="images/sunny.png" alt="sun" />
+                <img
+                  class="float-left"
+                  src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+                  alt="cloudy"
+                />
                 <div class="float-left">
                   <strong id="temperature">25</strong>
                   <span class="units">
