--- a/weatherapp.html
+++ b/weatherapp.html
@@ -30,15 +30,13 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1 id="city">
-              Auckland
-            </h1>
+            <h1 id="city"></h1>
             <ul>
               <li>
                 Last updated:
                 <span id="date"></span>
               </li>
-              <li id="description">Clear</li>
+              <li id="description"></li>
             </ul>
           </div>
 
@@ -47,11 +45,11 @@
               <div class="clearfix weather-temperature">
                 <img
                   class="float-left"
-                  src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                   alt="cloudy"
                 />
                 <div class="float-left">
-                  <strong id="temperature">25</strong>
+                  <strong id="temperature"></strong>
                   <span class="units">
                     <a href="#" id="celsius">°C</a>
                     |
@@ -60,15 +58,18 @@
                 </div>
               </div>
             </div>
+
             <div class="col-6">
               <ul>
                 <li>
                   Humidity:
-                  <span id="humidity">%</span>
+                  <span id="humidity"></span>
+                  %
                 </li>
                 <li>
                   Wind:
-                  <span id="wind">km/h</span>
+                  <span id="wind"></span>
+                  km/h
                 </li>
               </ul>
             </div>
@@ -76,5 +77,6 @@
         </div>
       </div>
     </div>
+    <script src="src/script.js"></script>
   </body>
 </html>
