--- a/weatherapp.html
+++ b/weatherapp.html
@@ -43,11 +43,7 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  class="float-left"
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="cloudy"
-                />
+                <img src="" class="float-left" id="icon" alt="" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units">
