--- a/weatherapp.html
+++ b/weatherapp.html
@@ -67,7 +67,7 @@
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units">
-                    <a href="#" id="celsius">°C</a>
+                    <a href="#" id="celsius" class="active">°C</a>
                     |
                     <a href="#" id="fahrenheit">°F</a>
                   </span>
