--- a/weatherapp.html
+++ b/weatherapp.html
@@ -63,7 +63,7 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img src="" class="float-left" id="icon" alt="" />
+                <img src="" id="icon" class="float-left" alt="" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units">
@@ -85,12 +85,22 @@
                 <li>
                   Wind:
                   <span id="wind"></span>
-                  km/h
+                  m/h
                 </li>
               </ul>
             </div>
           </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
+        <small>
+          <a
+            href="https://github.com/yingerliang/vanilla-weather-app"
+            target="_blank"
+          >
+            Open-source code
+          </a>
+          by Rebecca Liang
+        </small>
       </div>
     </div>
     <script src="src/script.js"></script>
