Added weather forecast

--- a/index.html
+++ b/index.html
@@ -90,7 +90,24 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast" id="forecast"></div>
+          <div class="weather-forecast" id="forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">
+                  Thu
+                </div>
+                <img
+                  src="http://openweathermap.org/img/wn/01n@2x.png"
+                  alt=""
+                  width="42"
+                />
+                <div class="weather-forcast-temperature">
+                  <span class="weather-forcast-temperature-max">18°</span>
+                  <span class="weather-forcast-temperature-min">12°</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
