--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <div class="col-9">
                 <input
                   type="search"
-                  palceholder="Enter a city name..."
+                  placeholder="Enter a city name..."
                   class="form-control"
                   id="city-input"
                   autocomplete="off"
@@ -90,24 +90,7 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast" id="forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-date">
-                  Thu
-                </div>
-                <img
-                  src="http://openweathermap.org/img/wn/01n@2x.png"
-                  alt=""
-                  width="42"
-                />
-                <div class="weather-forcast-temperature">
-                  <span class="weather-forcast-temperature-max">18°</span>
-                  <span class="weather-forcast-temperature-min">12°</span>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
         <small>
           <a
