Added JS for location button

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
 
           <hr />
-          <span id="upcoming-forecast">Upcoming Forecast</span>
+          <span id="upcoming-forecast">Upcoming Forecast:</span>
           <div class="weather-forecast" id="forecast"></div>
         </div>
         <br />
