Added styling & fees like temp

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
                   <span id="wind"></span>
                   km/h
                 </li>
+                <li>
+                  Feels like: 
+                  <span id="feels-like"></span>
+                  °C
+                </li>
               </ul>
             </div>
           </div>
